# gripa

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  test.yml
docs/: api.md  index.md  quick_start.md  user_guide.md
gripa/: _ssa.py  detector.py
